--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Alpha-Z: Library Archive</title>
+    <title>Alpha-Z: Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="app-container">
         <div class="main-background"></div>
-        <div class="vignette-overlay"></div>
 
         <header class="app-header">
             <div class="user-status">
@@ -21,9 +20,8 @@
 
         <main class="main-focus">
             <div class="lectern-display">
-                <div class="current-book-wrapper" onclick="alert('게임 시작!')">
+                <div class="current-book-wrapper">
                     <img src="img/current.png" alt="Current Chapter" class="book-primary">
-                    <div class="glow-effect"></div>
                 </div>
                 <div class="action-prompt">READ NOW</div>
             </div>
@@ -52,10 +50,6 @@
                 <div class="book-node locked">
                     <img src="img/locked.png" alt="Level 14">
                     <span class="lv-tag">XIV</span>
-                </div>
-                <div class="book-node locked">
-                    <img src="img/locked.png" alt="Level 15">
-                    <span class="lv-tag">XV</span>
                 </div>
             </div>
 
