--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     <img src="img/cleared.png" alt="Level 11">
                     <span class="lv-text">XI</span>
                 </div>
-                <div class="book-node locked">
+                <div class="book-node">
                     <img src="img/locked.png" alt="Level 13">
                     <span class="lv-text">XIII</span>
                 </div>
-                <div class="book-node locked">
+                <div class="book-node">
                     <img src="img/locked.png" alt="Level 14">
                     <span class="lv-text">XIV</span>
                 </div>
